<resources>
    <string name="app_name">UW Live Well</string>
    <string name="title_activity_login">Sign in</string>
    <string name="tag">Find your dream college pad!</string>
    <string name="e_mail">Email</string>
    <string name="password">Password</string>
    <string name="login">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="swipe_left_for_register">Swipe Left for Register</string>
    <string name="swipe_right_for_login">Swipe Right for Login</string>
    <string name="register">Register</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="your_name">Full Name</string>
    <string name="GuestButton">Continue as guest</string>
    <string name="user">User</string>
    <string name="profile">Profile</string>
    <string name="favorites">Favorites</string>
    <string name="logout">Logout</string>
</resources>
